# wasmer-examples

./: Cargo.toml  README.md
examples/: exports_function.rs  exports_global.rs  exports_memory.rs  handling_errors.rs  hello_wasmer.rs  instantiate_a_module.rs  interacting_with_memory.rs  metering.rs  table.rs
wasm_files/: exports_function.wasm  exports_function.wat  exports_global.wasm  exports_global.wat  exports_memory.wasm  exports_memory.wat  handling_errors.wasm  handling_errors.wat  hello_wasmer.wasm  hello_wasmer.wat  instantiate_a_module.wasm  instantiate_a_module.wat  interacting_with_memory.wasm  interacting_with_memory.wat  metering.wasm  metering.wat  table.wasm  table.wat
