[package]
edition = "2021"
name    = "wasmer-examples"
version = "0.1.0"

[dependencies]
anyhow                    = "1.0.86"
wasmer                    = "4.3.6"
wasmer-compiler           = { version = "=4.3.6", features = [ "compiler" ], optional = true }
wasmer-compiler-cranelift = { version = "=4.3.6", optional = true }

[features]
# backend means that the `wasmer` crate will be compiled with the `wasmer-compiler` or the `jsc`.
# That means: that is able to execute modules
backend = []
compiler = ["wasmer/compiler", "backend", "wasmer-compiler/translator"]
cranelift = ["compiler", "wasmer-compiler-cranelift", "wasmer/cranelift"]

[[example]]
name = "hello-wasmer"
path = "examples/hello_wasmer.rs"
required-features = ["cranelift"]

[[example]]
name = "instantiate-a-module"
path = "examples/instantiate_a_module.rs"
required-features = ["cranelift"]

[[example]]
name = "interacting-with-memory"
path = "examples/interacting_with_memory.rs"
required-features = ["cranelift"]

[[example]]
name = "handling-errors"
path = "examples/handling_errors.rs"
required-features = ["cranelift"]

[[example]]
name = "exports-global"
path = "examples/exports_global.rs"
required-features = ["cranelift"]

[[example]]
name = "exports-function"
path = "examples/exports_function.rs"
required-features = ["cranelift"]